temporal manual: explain absolute and relative time; HTML cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66174 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.connect/t.connect.html
+++ b/temporal/t.connect/t.connect.html
@@ -11,7 +11,7 @@ using shell style.
 parameters have been set, and if not will set them to use GRASS's
 default values.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 Setting the connection with t.connect will not test the connection for validity.
 Hence a database connection will not be established.
