--- a/temporal/t.rast.extract/t.rast.extract.html
+++ b/temporal/t.rast.extract/t.rast.extract.html
@@ -19,7 +19,7 @@ If no <em>r.mapcalc</em> expression is defined, the selected maps are
 simply registered in the new created output space time raster dataset
 to avoid data duplication.
 
-<h2>Note</h2>
+<h2>NOTES</h2>
 
 The <em>r.mapcalc</em> sub-expression should not contain the left side
 <tt>"map ="</tt> of a full <em>r.mapcalc</em> expression, only the right
