--- a/temporal/t.rast.gapfill/t.rast.gapfill.html
+++ b/temporal/t.rast.gapfill/t.rast.gapfill.html
@@ -6,7 +6,7 @@ space time raster dataset automatically. The predecessor and successor maps
 of the gaps will be identified and used to linear interpolate the raster
 map between them.
 
-<h2>Note</h2>
+<h2>NOTES</h2>
 This module uses <a href="r.series.interp.html">r.series.interp</a> to
 perform the interpolation for each gap independently. Hence several
 interpolation processes can be run in parallel.
