--- a/temporal/t.rast.import/t.rast.import.html
+++ b/temporal/t.rast.import/t.rast.import.html
@@ -3,7 +3,7 @@
 <em>t.rast.import</em> imports a space time raster dataset archive that
 was exported with <a href="t.rast.export.html">t.rast.export</a>.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 Optionally a base map name can be provided to avoid that existing
 raster maps are overwritten by the map names that are used in the STRDS
