--- a/temporal/t.rast.mapcalc/t.rast.mapcalc.html
+++ b/temporal/t.rast.mapcalc/t.rast.mapcalc.html
@@ -77,7 +77,7 @@ Supported internal variables for absolute time of the current sample interval or
 The <em>end_*</em> functions are represented by the null() internal variables
 in case of time instances.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 We will discuss the internal work of <em>t.rast.mapcalc</em> with an
 example. Imagine we have two STRDS as input, each with monthly
