--- a/temporal/t.rast.to.rast3/t.rast.to.rast3.html
+++ b/temporal/t.rast.to.rast3/t.rast.to.rast3.html
@@ -15,7 +15,7 @@ Gaps between raster map layer in the STRDS will
 be represented by NULL values in the voxel map layer.
 
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 The reference time for all space time voxel cubes is
 1900-01-0100:00:00. This allows the alignment space time voxel cubes
