--- a/temporal/t.rename/t.rename.html
+++ b/temporal/t.rename/t.rename.html
@@ -3,7 +3,7 @@
 This module renames space time datasets of different types (STRDS, STVDS, STR3DS)
 and updates the space time dataset register entries of the registered maps.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 Renaming of space time datasets works only for SQLite based temporal databases.
 
