--- a/temporal/t.sample/t.sample.html
+++ b/temporal/t.sample/t.sample.html
@@ -12,7 +12,7 @@ time datasets using temporal topology. The flag <em>-s</em> enables a
 spatio-temporal topology, so that only spatio-temporal related map 
 layers of space time datasets are considered in the analysis.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 The temporal relation <em>start</em> means that the start time of an 
 input map layer is temporally located in an interval of a sample map 
