--- a/temporal/t.shift/t.shift.html
+++ b/temporal/t.shift/t.shift.html
@@ -11,7 +11,7 @@ month(s), week(s), day(s), hour(s), minute(s) or second(s).
 The granularity in case of relative time is an integer. The temporal 
 unit is the unit of the space time dataset and can not be modified.
 
-<h2>Note</h2>
+<h2>NOTES</h2>
 Be careful when shifting space time datasets with absolute time. The 
 temporal granularity may change if you shift a space time dataset with 
 a unit that is different from the space time dataset granularity. Be 
