--- a/temporal/t.list/t.list.html
+++ b/temporal/t.list/t.list.html
@@ -11,7 +11,7 @@ define the columns that should be printed for each dataset and the
 order of the datasets. In addition a SQL WHERE statement can be
 specified to select a subset of the requested datasets.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 
 The SQL where and sort expression will be applied for each temporal
 database that was found in accessible mapsets. Hence sorting works only
