--- a/temporal/t.rast.aggregate.ds/t.rast.aggregate.ds.html
+++ b/temporal/t.rast.aggregate.ds/t.rast.aggregate.ds.html
@@ -7,7 +7,7 @@ intervals of all maps registered in a second space time dataset (can be
 STRDS, STR3DS or STVDS) are used to aggregate the maps of the input 
 space time raster dataset.
 
-<h2>NOTE</h2>
+<h2>NOTES</h2>
 The sampling method must be specified from the sampler dataset point of view.
 It defines the temporal relations hips between intervals of the sampling 
 dataset and the input space time raster dataset.
