temporal separator parameter: use label to re-enable standard description
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66179 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.rast.list/t.rast.list.html
+++ b/temporal/t.rast.list/t.rast.list.html
@@ -21,7 +21,7 @@ gaps between map layer. The <i>gran</i> method allows the listing of
 map layer sampled by a user defined <b>granule</b>. As default the
 granularity of the space time raster dataset is used for sampling.
 
-For user defined column separator can be specified with the <b>separator</b>
+The output column separator can be specified with the <b>separator</b>
 option.
 
 <h2>EXAMPLE</h2>
