t.info manual: remark about granularity added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66182 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.info/t.info.html
+++ b/temporal/t.info/t.info.html
@@ -33,7 +33,7 @@ t.info -s
  +----------------------------------------------------------------------------+
 </pre></div>
 
-<h3>space time dataset information</h3>
+<h3>Space time dataset information</h3>
 
 In order to obtain information about a space time dataset, run:
 
@@ -89,6 +89,9 @@ t.info in=tempmean_monthly
  |
  +----------------------------------------------------------------------------+
 </pre></div>
+
+The "granularity" is the smallest gap size between the found time instances, i.e.
+it the greatest common divisor between all gaps in the time series.
 
 <h3>Temporal maps information</h3>
 
