--- a/vector/v.lidar.edgedetection/v.lidar.edgedetection.html
+++ b/vector/v.lidar.edgedetection/v.lidar.edgedetection.html
@@ -4,8 +4,8 @@
 LiDAR data. The filter aims to recognize and extract attached and 
 detached object (such as buildings, bridges, power lines,  trees, etc.) 
 in order to create a Digital Terrain Model. 
-<br>
-<br>
+
+<p>
 In particular, this module detects the edge of each single feature over 
 the terrain surface of a LIDAR point surface. First of all, a bilinear 
 spline interpolation with a Tychonov regularization parameter is 
@@ -26,12 +26,11 @@ being an EDGE point if the gradient magnitude is greater than or equal to
 the low threshold, its residual is greater than or equal to zero, and the 
 gradient to two of eight neighboring points is greater than the high 
 threshold. Other points are classified as TERRAIN.
-<br>
-<br>
+
+<p>
 The output will be a vector map in which points has been classified as 
 TERRAIN, EDGE or UNKNOWN. This vector map should be the input of 
-<em>v.lidar.growing</em> module.
-
+<em><a href="v.lidar.growing.html">v.lidar.growing</a></em> module.
 
 <!-- TODO: review how it is with layers and cats -->
 <h2>NOTES</h2>
@@ -40,31 +39,29 @@ In this module, an external table will be created which will be useful for
 the next module of the procedure of LiDAR data filtering. In this table 
 the interpolated height values of each point will be recorded. Also points 
 in the output vector map will be classified as:
-<br>
-<br>
-TERRAIN (cat = 1, layer = 1)
-<br>
-EDGE (cat = 2, layer = 1)
-<br>
-UNKNOWN (cat = 3, layer = 1)
-<br>
-The final result of the whole procedure (v.lidar.edgedetection,
-v.lidar.growing, v.lidar.correction) will be a point classification in
-four categories:
-<br>
-<br>
-TERRAIN SINGLE PULSE (cat = 1, layer = 2)
-<br>
-TERRAIN DOUBLE PULSE (cat = 2, layer = 2)
-<br>
-OBJECT SINGLE PULSE (cat = 3, layer = 2)
-<br>
-OBJECT DOUBLE PULSE (cat = 4, layer = 2)
 
+<div class="code"><pre>
+TERRAIN (cat = 1, layer = 1)
+EDGE (cat = 2, layer = 1)
+UNKNOWN (cat = 3, layer = 1)
+</pre></div>
+
+The final result of the whole procedure (<em>v.lidar.edgedetection</em>,
+<em><a href="v.lidar.growing.html">v.lidar.growing</a></em>,
+<em><a href="v.lidar.correction.html">v.lidar.correction</a></em>)
+will be a point classification in four categories:
+
+<div class="code"><pre>
+TERRAIN SINGLE PULSE (cat = 1, layer = 2)
+TERRAIN DOUBLE PULSE (cat = 2, layer = 2)
+OBJECT SINGLE PULSE (cat = 3, layer = 2)
+OBJECT DOUBLE PULSE (cat = 4, layer = 2)
+</pre></div>
 
 <h2>EXAMPLES</h2>
 
 <h3>Basic edge detection</h3>
+
 <div class="code"><pre>
 v.lidar.edgedetection input=vector_last output=edge ew_step=8 ns_step=8 lambda_g=0.5
 </pre></div>
@@ -122,6 +119,26 @@ m.nviz.image elevation_map=terrain -a mode=fine resolution_fine=1 color=191:191:
     </em></p>
 </center>
 
+<h2>REFERENCES</h2>
+
+<ul>
+<li>Antolin, R. et al., 2006. Digital terrain models determination by LiDAR 
+technology: Po basin experimentation. Bolletino di Geodesia e Scienze 
+Affini, anno LXV, n. 2, pp. 69-89.</li>
+<li>Brovelli M. A., Cannata M., Longoni U.M., 2004. LIDAR Data Filtering and 
+DTM Interpolation Within GRASS, Transactions in GIS, April 2004,  vol. 8, 
+iss. 2, pp. 155-174(20), Blackwell Publishing Ltd.</li>
+<li>Brovelli M. A., Cannata M., 2004. Digital Terrain model reconstruction in 
+urban areas from airborne laser scanning data: the method and an  example 
+for Pavia (Northern Italy). Computers and Geosciences 30 (2004) pp.325-331</li>
+<li>Brovelli M. A. and Longoni U.M., 2003. Software per il filtraggio di dati 
+LIDAR, Rivista dell'Agenzia del Territorio, n. 3-2003, pp. 11-22 (ISSN 1593-2192).</li>
+<li>Brovelli M. A., Cannata M. and Longoni U.M., 2002. DTM LIDAR in area urbana, 
+Bollettino SIFET N.2, pp. 7-26.</li>
+<li>Performances of the filter can be seen in the
+<a href="http://www.itc.nl/isprswgIII-3/filtertest/MainDoc.htm">ISPRS WG III/3 Comparison of Filters</a> 
+report by Sithole, G. and Vosselman, G., 2003.</li>
+</ul>
 
 <h2>SEE ALSO</h2>
 
@@ -134,8 +151,8 @@ m.nviz.image elevation_map=terrain -a mode=fine resolution_fine=1 color=191:191:
 <a href="v.in.ascii.html">v.in.ascii</a>
 </em>
 
-
 <h2>AUTHORS</h2>
+
 Original version of program in GRASS 5.4:
 <br>
 Maria Antonia Brovelli, Massimiliano Cannata, Ulisse Longoni and Mirko Reguzzoni
@@ -144,35 +161,5 @@ Update for GRASS 6.X:
 <br>
 Roberto Antolin and Gonzalo Moreno
 
-
-<h2>REFERENCES</h2>
-
-Antolin, R. et al., 2006. Digital terrain models determination by LiDAR 
-technology: Po basin experimentation. Bolletino di Geodesia e Scienze 
-Affini, anno LXV, n. 2, pp. 69-89.
-<br>
-<br>
-Brovelli M. A., Cannata M., Longoni U.M., 2004. LIDAR Data Filtering and 
-DTM Interpolation Within GRASS, Transactions in GIS, April 2004,  vol. 8, 
-iss. 2, pp. 155-174(20), Blackwell Publishing Ltd.
-<br>
-<br>
-Brovelli M. A., Cannata M., 2004. Digital Terrain model reconstruction in 
-urban areas from airborne laser scanning data: the method and an  example 
-for Pavia (Northern Italy). Computers and Geosciences 30 (2004) pp.325-331
-<br>
-<br>
-Brovelli M. A. and Longoni U.M., 2003. Software per il filtraggio di dati 
-LIDAR, Rivista dell'Agenzia del Territorio, n. 3-2003, pp. 11-22 (ISSN 1593-2192).
-<br>
-<br>
-Brovelli M. A., Cannata M. and Longoni U.M., 2002. DTM LIDAR in area urbana, 
-Bollettino SIFET N.2, pp. 7-26.
-<br>
-<br>
-Performances of the filter can be seen in the
-<a href="http://www.itc.nl/isprswgIII-3/filtertest/MainDoc.htm">ISPRS WG III/3 Comparison of Filters</a> 
-report by Sithole, G. and Vosselman, G., 2003. 
-
-<br>
-<p><i>Last changed: $Date$</i>
+<p>
+<i>Last changed: $Date$</i>
