--- a/imagery/i.pca/i.pca.html
+++ b/imagery/i.pca/i.pca.html
@@ -42,15 +42,16 @@ percent variance observed in the input bands.
 <h2>NOTES</h2>
 
 Richards (1986) gives a good example of the application of principal
-components analysis (pca) to a time series of LANDSAT images of a burned
+components analysis (PCA) to a time series of LANDSAT images of a burned
 region in Australia.
-<p>Eigenvalue and eigenvector information is stored in the output maps'
+<p>
+Eigenvalue and eigenvector information is stored in the output maps'
 history files. View with <em>r.info</em>.
 
 
 <h2>EXAMPLE</h2>
 
-Using Landsat imagery in the North Carolina sample dataset:
+PCA calculation using Landsat7 imagery in the North Carolina sample dataset:
 
 <div class="code"><pre>
 g.region raster=lsat7_2002_10 -p
@@ -65,8 +66,21 @@ r.info -h lsat7_2002_pca.1
    PC4     32.85 ( 0.1752,-0.0191,-0.4053, 0.1593,-0.4435, 0.7632) [ 0.63%]
    PC5     20.73 (-0.6170,-0.2514, 0.6059, 0.1734,-0.3235, 0.2330) [ 0.40%]
    PC6      4.08 (-0.5475, 0.8021,-0.2282,-0.0607,-0.0208, 0.0252) [ 0.08%]
+
+d.mon wx0
+d.rast lsat7_2002_pca.1
+# ...
+d.rast lsat7_2002_pca.6
 </pre></div>
 
+In this example, the first two PCAs (PCA1 and PCA2) already explain 94.31% of
+the variance in the six input channels.
+
+<p>
+<center>
+<img src="i_pca_result.png" alt="PCA result"><br>
+Resulting PCA maps calculated from the Landsat7 imagery (NC, USA)
+</center>
 
 <h2>SEE ALSO</h2>
 
@@ -75,10 +89,8 @@ Richards, John A.,
 Springer-Verlag, 1986.
 
 <p>
-Vali, Ali R.,
-Personal communication,
-Space Research Center, 
-University of Texas, Austin, 1990.
+Vali, Ali R., Personal communication,
+Space Research Center, University of Texas, Austin, 1990.
 
 <p>
 <em>
@@ -96,7 +108,7 @@ University of Texas, Austin, 1990.
 </em>
 
 
-<h2>AUTHOR</h2>
+<h2>AUTHORS</h2>
 
 David Satnik, GIS Laboratory
 <p>Major modifications for GRASS 4.1 were made by <br>
