--- a/temporal/t.register/t.register.html
+++ b/temporal/t.register/t.register.html
@@ -43,6 +43,11 @@ database.
 
 <h2>INPUT FILE FORMAT</h2>
 
+The input file consists of a list of map names, optionally along with time stamps.
+Each map name is to be stored in a row in this file.
+<p>
+There are several options to register maps:
+<p>
 Specification of map names:
 <div class="code"><pre>
 prec_1
@@ -53,6 +58,7 @@ prec_5
 prec_6
 </pre></div>
 
+<p>
 Specification of map names and the absolute start time (date) of the
 time instances:
 <div class="code"><pre>
@@ -64,6 +70,7 @@ prec_5|2001-05-01
 prec_6|2001-06-01
 </pre></div>
 
+<p>
 Specification of map names and the absolute time stamp (datetime):
 <div class="code"><pre>
 terra_lst_day20020113|2002-01-13 10:30
@@ -73,6 +80,7 @@ terra_lst_day20020116|2002-01-16 10:30
 terra_lst_day20020117|2002-01-17 10:30
 </pre></div>
 
+<p>
 Specification of the map name and the absolute time interval with start
 and end time:
 <div class="code"><pre>
@@ -87,6 +95,20 @@ prec_6|2002-04-01|2002-07-01
 <h2>EXAMPLE</h2>
 
 <h3>North Carolina dataset</h3>
+
+<h4>Using a text file</h4>
+Register maps in a absolute space time dataset, creating a time interval
+
+<div class="code"><pre>
+# first:  prepare a text file with a list of input maps (see above)
+# second: register maps
+t.register -i type=raster input=precipitation_monthly \
+    file=list_of_input_maps.txt start=2009-01-01 \
+    increment="1 months"
+</pre></div>
+
+
+<h4>Using <em>g.list</em> to generate the input</h4>
 
 Register maps in a absolute space time dataset, creating a time interval
 
