temporal manual: explain usage of temporal databases stored in other mapsets
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66261 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.info/t.info.html
+++ b/temporal/t.info/t.info.html
@@ -15,6 +15,12 @@ information and metadata are stored in the temporal database.
 In addition, information about the chosen temporal database backend
 can be reported.
 
+<h2>NOTES</h2>
+
+Temporal databases stored in other mapsets can be used as long as they
+are in the user's current mapset search path (managed with
+<a href="g.mapsets.html">g.mapsets</a>).
+
 <h2>EXAMPLES</h2>
 
 <h3>Temporal DBMI information</h3>
