--- a/temporal/t.merge/t.merge.html
+++ b/temporal/t.merge/t.merge.html
@@ -13,6 +13,12 @@ Maps from the input space time datasets will be registered only once in
 the output space time dataset, hence the same maps can be registered in 
 different input space time datasets.
 
+<h2>NOTES</h2>
+
+Temporal databases stored in other mapsets can be used as long as they
+are in the user's current mapset search path (managed with
+<a href="g.mapsets.html">g.mapsets</a>).
+
 <h2>Examples</h2>
 
 In this example we will create two space time raster datasets and 
