--- a/temporal/temporalintro.html
+++ b/temporal/temporalintro.html
@@ -21,7 +21,10 @@ are based on the GRASS GIS temporal framework.
 <h3>Temporal data management in general</h3>
 
 Space time datasets are stored in a temporal database. SQLite3 or 
-PostgreSQL are supported as SQL database back end. 
+PostgreSQL are supported as SQL database back end. Temporal databases
+stored in other mapsets can be used as long as they are in the
+user's current mapset search path (managed with <a href="g.mapsets.html">g.mapsets</a>).
+<p>
 Connection settings are performed with <a href="t.connect.html">t.connect</a>.
 As default a sqlite3 database will be created in the current mapset that
 stores all space time datasets and registered time series maps.
@@ -189,10 +192,10 @@ pendants but with 3D raster map layers:
 <li>Gebbert, S., Pebesma, E., 2014. TGRASS: A temporal GIS for field based
     environmental modeling. Environmental Modelling &amp; Software 53, 1-12.
     (<a href="http://dx.doi.org/10.1016/j.envsoft.2013.11.001">DOI</a>)</li>
+<li><a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing</a> (Wiki)</li>
 <li>Vaclav Petras, Anna Petrasova, Helena Mitasova, Markus Neteler, <b>FOSS4G 2014 workshop</b>: <br>
     <a href="http://fatra.cnr.ncsu.edu/temporal-grass-workshop/">Spatio-temporal data handling and visualization in GRASS GIS</a></li>
-<li><a href="http://grasswiki.osgeo.org/wiki/Temporal_data_processing">Temporal data processing</a> (Wiki)</li>
-<li><a href="http://www.geostat-course.org/Topic_Gebbert">GEOSTAT TGRASS Course</a></li>
+<li><a href="http://www.geostat-course.org/Topic_Gebbert">GEOSTAT 2012 TGRASS Course</a></li>
 </ul>
 
 
