--- a/temporal/t.vect.db.select/t.vect.db.select.html
+++ b/temporal/t.vect.db.select/t.vect.db.select.html
@@ -9,7 +9,7 @@ registered in a space time vector dataset.
 The example is querying the <em>shoreline</em> space time dataset:
 
 <div class="code"><pre>
-t.vect.db.select in=shoreline
+t.vect.db.select input=shoreline
 start_time|end_time|cat|DESCR|SOURCE|DATE
 1849|1873|1|T-736|NOAA/USGS|01/01/1858
 1849|1873|2|T-657|NOAA/USGS|01/01/1857
@@ -27,7 +27,7 @@ In the following example it print only DATE and SOURCE columns for data
 before 1900-01-01.
 
 <div class="code"><pre>
-t.vect.db.select in=shoreline column=DATE,SOURCE t_where="start_time < 1900"
+t.vect.db.select input=shoreline column=DATE,SOURCE t_where="start_time < 1900"
 start_time|end_time|DATE|SOURCE
 1849|1873|01/01/1858|NOAA/USGS
 1849|1873|01/01/1857|NOAA/USGS
