--- a/temporal/t.vect.export/t.vect.export.html
+++ b/temporal/t.vect.export/t.vect.export.html
@@ -29,7 +29,7 @@ within the boundary of the state taken at 1 month intervals.
 
 <div class="code"><pre>
     
-t.vect.export in=shoreline out=shoreline_nc
+t.vect.export input=shoreline output=shoreline_nc
 
 tar xvfj shoreline_nc
 shoreline_1849_1873.xml
