--- a/temporal/t.vect.list/t.vect.list.html
+++ b/temporal/t.vect.list/t.vect.list.html
@@ -34,7 +34,7 @@ value is used, the value <em>deltagaps</em> will print the delta between
 maps and also the gaps if they exist (like in this example).
 
 <div class="code"><pre>
-t.vect.list method=deltagaps in=shoreline
+t.vect.list method=deltagaps input=shoreline
 id|name|layer|mapset|start_time|end_time|interval_length|distance_from_begin
 shoreline_1849_1873@shoreline|shoreline_1849_1873|None|shoreline|1849|1873|24|0
 None|None|None|None|1873|1925|52|24
