--- a/temporal/t.sample/t.sample.html
+++ b/temporal/t.sample/t.sample.html
@@ -43,16 +43,16 @@ time stamped map layers in <em>A</em> and <em>P</em>.
 g.region s=0 n=80 w=0 e=120 b=0 t=50 res=10 res3=10 -p3
 
 # Generate the raster map layer
-r.mapcalc expr="a1 = rand(0, 550)" -s
-r.mapcalc expr="a2 = rand(0, 450)" -s
-r.mapcalc expr="a3 = rand(0, 320)" -s
-r.mapcalc expr="a4 = rand(0, 510)" -s
-r.mapcalc expr="a5 = rand(0, 300)" -s
-r.mapcalc expr="a6 = rand(0, 650)" -s
+r.mapcalc expression="a1 = rand(0, 550)" -s
+r.mapcalc expression="a2 = rand(0, 450)" -s
+r.mapcalc expression="a3 = rand(0, 320)" -s
+r.mapcalc expression="a4 = rand(0, 510)" -s
+r.mapcalc expression="a5 = rand(0, 300)" -s
+r.mapcalc expression="a6 = rand(0, 650)" -s
 
 # Generate the vector map layer
-v.random -z output=pnts1 n=20 zmin=0 zmax=100 column=height
-v.random -z output=pnts2 n=20 zmin=0 zmax=100 column=height
+v.random -z output=pnts1 n=20 zminput=0 zmax=100 column=height
+v.random -z output=pnts2 n=20 zminput=0 zmax=100 column=height
 
 n1=`g.tempfile pid=1 -d` 
 n2=`g.tempfile pid=2 -d`
