--- a/temporal/t.shift/t.shift.html
+++ b/temporal/t.shift/t.shift.html
@@ -32,12 +32,12 @@ dataset using an increment of one day. Then we shift the time intervals
 with a granularity of 12 hours.
 
 <div class="code"><pre>
-r.mapcalc expr="prec_1 = rand(0, 550)" -s
-r.mapcalc expr="prec_2 = rand(0, 450)" -s
-r.mapcalc expr="prec_3 = rand(0, 320)" -s
-r.mapcalc expr="prec_4 = rand(0, 510)" -s
-r.mapcalc expr="prec_5 = rand(0, 300)" -s
-r.mapcalc expr="prec_6 = rand(0, 650)" -s
+r.mapcalc expression="prec_1 = rand(0, 550)" -s
+r.mapcalc expression="prec_2 = rand(0, 450)" -s
+r.mapcalc expression="prec_3 = rand(0, 320)" -s
+r.mapcalc expression="prec_4 = rand(0, 510)" -s
+r.mapcalc expression="prec_5 = rand(0, 300)" -s
+r.mapcalc expression="prec_6 = rand(0, 650)" -s
 
 t.create type=strds temporaltype=absolute \
          output=precipitation_daily \
