manual: minor tweaks
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66280 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.create/t.create.html
+++ b/temporal/t.create/t.create.html
@@ -44,6 +44,7 @@ t.create type=stvds temporaltype=relative \
 
 <em>
 <a href="t.register.html">t.register</a>,
+<a href="t.remove.html">t.remove</a>,
 <a href="t.info.html">t.info</a>
 </em>
 
