--- a/temporal/t.info/t.info.html
+++ b/temporal/t.info/t.info.html
@@ -141,6 +141,7 @@ t.info input=2009_01_tempmean type=raster
 
 <em>
 <a href="t.create.html">t.create</a>,
+<a href="t.list.html">t.list</a>,
 <a href="t.register.html">t.register</a>,
 <a href="r.info.html">r.info</a>,
 <a href="r3.info.html">r3.info</a>,
