--- a/temporal/t.list/t.list.html
+++ b/temporal/t.list/t.list.html
@@ -23,7 +23,7 @@ are in the user's current mapset search path (managed with
 
 <h2>EXAMPLES</h2>
 
-In order to obtain the list of raster space time dataset
+Obtain the list of raster space time dataset(s):
 
 <div class="code"><pre>
 t.list strds
@@ -32,11 +32,12 @@ Space time raster datasets with absolute time available in mapset &#60;climate_2
 tempmean_monthly@climate_2000_2012
 </pre></div>
 
-Tha user can obtain also the list of raster contained into temporal
-datasets
+The user can obtain also the list of raster maps contained in a temporal
+datasets (this may be the content of several space time datasets if enabled
+through <a href="g.mapsets.html">g.mapsets</a>):
 
 <div class="code"><pre>
-t.list rast
+t.list raster
 Time stamped raster maps with absolute time available in mapset &#60;climate_2000_2012&#62;:
 2009_01_tempmean@climate_2000_2012
 2009_02_tempmean@climate_2000_2012
